@@ -1,6 +1,8 @@
 25/6/14 started 7.40.2
 - dzsave write to zip stops at 4gb, thanks bgilbert
 - improve short option name handling, thanks bgilbert
+- added --enable-docs configure option to help freebsd
+- removed a bash-ism from configure to help freebsd
 
 24/6/14 started 7.40.1
 - revise man.1 pages
